# smart-charging-and-blockchain

./: Anchor.toml  README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  idl.json  index.tsx  solana-react-ui-styles.css
frontend/src/pages/: ConnectWallet.tsx  Overview.tsx  Setup.tsx  StartCharge.tsx  Terminology.tsx
programs/smart-charging-and-blockchain/: Cargo.toml
programs/smart-charging-and-blockchain/src/: lib.rs
tests/: smart-charging-and-blockchain.ts
